# sua

./: .env  Cargo.toml  README.md
migrations/2018-12-22-061815_posts/: up.sql
migrations/2018-12-22-165029_create_accounts/: down.sql  up.sql
migrations/2018-12-22-165308_fix_src_dest_type/: down.sql  up.sql
migrations/2018-12-22-202850_add_datetime/: down.sql  up.sql
migrations/2018-12-24-155357_dest_pivot_table/: down.sql  up.sql
migrations/2018-12-24-161327_drop_dest_column/: down.sql  up.sql
src/: accounts.rs  db.rs  lib.rs  models.rs  posts.rs  schema.rs
