[package]
name = "sua"
version = "0.1.0"
authors = ["ebehar <behare@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "0.7.16"
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.3.3", features = ["postgres", "serde_json", "chrono"] }
dotenv = "0.13.0"
getopts = "0.2.18"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
